chore: spring upgrade